--- a/src/components/Layouts/MainLayout/style.scss
+++ b/src/components/Layouts/MainLayout/style.scss
@@ -1,10 +1,6 @@
 .main-layout-wrapper {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: stretch;
-
   .main-content {
-    padding: 32px;
+    padding: 32px 32px 32px 292px;
     width: 100%;
   }
 }
