--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -1,10 +1,10 @@
 .sidebar {
-  flex: 0 1 260px;
   color: #212529;
   background: #f5f5f6;
   border-left: 1px solid #eee;
-  width: 100%;
-  height: 100vh;
+  width: 260px;
+  height: 100%;
+  position: fixed;
 
   .sidebar-logo {
     font-size: 28px;
