--- a/src/pages/Exercises/style.scss
+++ b/src/pages/Exercises/style.scss
@@ -22,34 +22,30 @@
 }
 
 .exercises-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 16px 8px;
+}
 
-  .exercises-item {
-    margin: 24px 0;
+.ui-table {
+  font-size: 14px;
+  border-collapse: collapse;
+  width: 100%;
+  background: #fff;
+  border-radius: 16px;
 
-    .exercises-item-article {
-      background: #fff;
-      border-radius: 4px;
-      border: 1px solid rgba(135,150,165, .25);
-      padding: 24px;
+  th, td {
+    border: 1px solid #e6e7f1;
+    text-align: left;
+    padding: 12px;
+    color: #787a8d;
+  }
 
-      .exercises-item-title {
-        font-size: 20px;
-        line-height: 24px;
-        font-weight: 500;
-        margin: 0;
-      }
+  tr:nth-child(even) {
+    background: #f6f7fa;
+  }
 
-      .exercises-item-description {
-        font-size: 16px;
-        line-height: 18px;
-      }
-
-      .exercises-item-footer {
-        text-align: right;
-      }
-    }
+  th {
+    background: rgba(107, 117, 141, 0.7);
+    color: #fff;
+    font-weight: 500;
   }
 }
